--- a/index.html
+++ b/index.html
@@ -1028,6 +1028,7 @@ Dots/bullets/indicators
                     <div class="info-sponsor-button">
                         <button class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</button>
                         <button class="sponsor-button sponsor-button-two modal-btn-four ripple-btn">FAQs</button>
+                        <!-- <a class="sponsor-button" href="./sponsor/">Learn More</a> -->
                     </div>
                        
                 </div>
