--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -168,18 +168,18 @@
         <div class="group-one">
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/brand-positioning.png" alt="">
             </div>
-            <div>
+            <div class="card-text">
               <h4>Positive Brand Image</h4>
               <p>Supporting a student project will elevate the outlook of your rganization</p>
             </div>
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/corporate.png" alt="">
             </div>
-            <div>
+            <div class="card-text">
               <h4>Corporate Social Responsibility</h4>
               <p>Associating with us will add to CSR ativities of your organisation</p>
             </div>
@@ -188,18 +188,18 @@
         <div class="group-two">
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/digital-campaign.png" alt="">
             </div>
-            <div>
+            <div class="card-text">
               <h4>Publicity</h4>
               <p>We shall publicise your company through our social media platforms, unveil event, college fest and other activities</p>
             </div>
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/idea.png" alt="">
             </div>
-            <div>
+            <div class="card-text">
               <h4>Supporting the youth</h4>
               <p>Aiding young students to advance in the feilds of science and technology by the provision of practical experience</p>
             </div>
@@ -214,7 +214,7 @@
         <h1>How can you sponsor us?</h1>
         
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. -->
       </p>
       <!-- <img src="../IMAGES/sponsorPage/back.webp" alt=""> -->
       </div>
@@ -223,7 +223,7 @@
         <div class="group-one">
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/donation.png" alt="">
             </div>
             <div class="card-text">
               <h4>Financial Support</h4>
@@ -232,7 +232,7 @@
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/manufacture.png" alt="">
             </div>
             <div class="card-text">
               <h4>Material and Manufacturing</h4>
@@ -243,7 +243,7 @@
         <div class="group-two">
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/repair.png" alt="">
             </div>
             <div class="card-text">
               <h4>Components and Parts</h4>
@@ -252,7 +252,7 @@
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="../IMAGES/sponsorPage/back.webp" alt="">
+              <img src="../IMAGES/sponsorPage/shipping.png" alt="">
             </div>
             <div class="card-text">
               <h4>Logistics</h4>
