--- a/cars/VRF2/index.html
+++ b/cars/VRF2/index.html
@@ -149,9 +149,9 @@
 
 
     <section id="home">
-      <h1>VRF 2</h1>
+      <img class="model-name" src="../../IMAGES/CARS/VRF2.png" alt="">
       <p>Under Maintainence</p>
-      <img style="height: 200px;" src="../../IMAGES/CARS/vrf2-home.webp" alt="">
+      <!-- <img style="height: 200px;" src="../../IMAGES/CARS/vrf2-home.webp" alt=""> -->
     </section>
 
     <section id="VRF2-info">
