--- a/cars/VRF2/index.html
+++ b/cars/VRF2/index.html
@@ -150,14 +150,14 @@
 
     <section id="home">
       <img class="model-name" src="../../IMAGES/CARS/VRF2.png" alt="">
-      <p>Under Maintainence</p>
-      <!-- <img style="height: 200px;" src="../../IMAGES/CARS/vrf2-home.webp" alt=""> -->
+      <!-- <p>Under Maintainence</p> -->
+      <img class="model-sub-heading" src="../../IMAGES/CARS/vrf2-home.webp" alt="">
     </section>
 
     <section id="VRF2-info">
 
         <div class="info">
-
+            <img src="../../IMAGES/CARS/Asset 3.webp" alt="">
         </div>
 
         <div class="specs">
