--- a/cars/VRF2/index.html
+++ b/cars/VRF2/index.html
@@ -149,7 +149,7 @@
 
 
     <section id="home">
-      <img class="model-name" src="../../IMAGES/CARS/VRF2.png" alt="">
+      <img class="model-name" src="../../IMAGES/CARS/vrf2.png" alt="">
       <!-- <p>Under Maintainence</p> -->
       <img class="model-sub-heading" src="../../IMAGES/CARS/vrf2-home.webp" alt="">
     </section>
