--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -306,7 +306,7 @@
    
 
     <script src="../JS/loader.js"></script>
-    <script src="../JS/backScroll.js"></script>
+    <script src="../JS/backscroll.js"></script>
     <script src="../JS/mobnav.js"></script>
     <script src="../JS/ripple.js"></script>
     <!-- <script src="./crowdFunding.js"></script> -->
