--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
                         <div class="swiper-slide banner-5">
                             <a class="youtube-banner-button" target="_blank" href="https://narkha.com/collections/velocita-racing">Shop Now</a>
                         </div>
-                      <div class="swiper-slide banner-1"></div>
+                      <div class="swiper-slide banner-1">
+                        <!-- <a class="youtube-banner-button" href="#cars">Learn More</a> -->
+                      </div>
                       <div class="swiper-slide banner-2">
                         <a class="podcast-banner-button" href="#podcast">Learn More</a>
                       </div>
@@ -611,7 +613,7 @@ Dots/bullets/indicators
                                     <!-- <button>VIEW PAST</button> -->
                                     <img class="vrf2-img" src="./IMAGES/CARS/vrf-2-blue.png" alt="">
                                     <img class="vrf-position" src="./IMAGES/CARS/position-2020.png" alt="">
-                                    <a class="car-button" href="./cars/VRF2/">Learn More</a>
+                                    <a class="car-button vrf2-night" href="javascript:void(0);">Learn More</a>
                                 </div>
                             </div>
         
@@ -647,7 +649,7 @@ Dots/bullets/indicators
                                     <!-- <button>VIEW PAST</button> -->
                                     <img class="vrf2-img" src="./IMAGES/CARS/vrf1.png" alt="">
                                     <img class="vrf-position" src="./IMAGES/CARS/vrf1-info.png" alt="">
-                                    <a class="car-button" href="javascript:void(0);">Learn More</a>
+                                    <a class="car-button vrf1-night" href="javascript:void(0);">Learn More</a>
                                 </div>
                             </div>
 
