--- a/sponsor/index.html
+++ b/sponsor/index.html
@@ -264,6 +264,17 @@
       
     </section>
 
+    <section id="brochure">
+      <div class="brochure-container">
+        <div class="click-here">
+          <h1>Take a look at our brochure</h1>
+          <a class="brochure-button" href="./brochure/">View Brochure</a>
+        </div>
+        
+        <a href="./brochure/"><img src="./brochure/pages/1-large.jpg" alt="velocita racing brochure"></a>
+      </div>
+    </section>
+
   <div class="footer-image">
       <!-- <img src="../IMAGES/HOME/footer.png" alt="footer image"> -->
   </div>
