--- a/index.html
+++ b/index.html
@@ -1054,9 +1054,9 @@ Dots/bullets/indicators
                             <br><br>Velocita Racing will be greatful for your support!</p>
                     </div>
                     <div class="info-sponsor-button">
-                        <button class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</button>
-                        <button class="sponsor-button sponsor-button-two modal-btn-four ripple-btn">FAQs</button>
-                        <!-- <a class="sponsor-button" href="./sponsor/">Learn More</a> -->
+                        <a class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</a>
+                        <button style="display: none;" class="sponsor-button sponsor-button-two modal-btn-four ripple-btn">FAQs</button>
+                        <a class="sponsor-button" href="./sponsor/">Learn More</a>
                     </div>
                        
                 </div>
