--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ Dots/bullets/indicators
                     <div class="info-sponsor-button">
                         <a class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</a>
                         <button style="display: none;" class="sponsor-button sponsor-button-two modal-btn-four ripple-btn">FAQs</button>
-                        <a class="sponsor-button" href="./sponsor/">Learn More</a>
+                        <a class="sponsor-button ripple-btn" href="./sponsor/">Learn More</a>
                     </div>
                        
                 </div>
