--- a/index.html
+++ b/index.html
@@ -884,6 +884,7 @@ Dots/bullets/indicators
             </div>
         </div> -->
 
+        <section class="static-image"></section>
 
 
         <section id="careers">
