--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ Dots/bullets/indicators
             </div>
         </div> -->
 
-        <section class="static-image"></section>
+        <section class="static-image"><div class="cover"></div></section>
 
 
         <section id="careers">
