--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <!-- IMAGES/HOME/VR new logo.png -->
         <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
         <ul class="nav-links">
-            <div class="night-mode">
+            <!-- <div class="night-mode">
                 <input type='checkbox' id='time' class="night-toggle"/>
                 <label for='time'>NIG</label>
-            </div>
+            </div> -->
             <li><a href="#home">HOME</a></li>
             <li class="unset-values one-nav arrowone">
             
@@ -176,8 +176,8 @@
                 <div class="dropdown">
                     <button class="dropbtn">CAREERS<img class="dropdown-arrow" src="./IMAGES/arrow.png" alt="dropdown-arrow"></button>
                     <div class="dropdown-content">
-                    <a href="#careers">STUDENT CAREERS</a>
-                    <a href="./careers/">EXPLORE AREAS</a>
+                    <a href="#exp-careers">STUDENT CAREERS</a>
+                    <a href="#careers">EXPLORE AREAS</a>
                     <a href="#join-us">RECRUITMENT 2021</a>
                     <!-- <a href="#">Link 3</a> -->
                     </div>
@@ -190,6 +190,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">SPONSORS<img class="dropdown-arrow" src="./IMAGES/arrow.png" alt="dropdown-arrow"></button>
                     <div class="dropdown-content">
+                    <a href="#exp-sponsorship">EXPLORE</a>
                     <a href="#sponsors">OUR SPONSORS</a>
                     <a href="#sponsor-us">BECOME A SPONSOR</a>
                     <!-- <a href="#">Link 3</a> -->
@@ -884,7 +885,12 @@ Dots/bullets/indicators
             </div>
         </div> -->
 
-        <section class="static-image"><div class="cover"></div></section>
+        <section id="exp-careers" class="static-career">
+            <div class="cover">
+                <h4>Kickstart your career with Velocita</h4>
+                <p>Become a part of the FSAE community</p>
+            </div>
+        </section>
 
 
         <section id="careers">
@@ -941,6 +947,15 @@ Dots/bullets/indicators
 
         </section>
 
+
+        <section id="exp-sponsorship" class="static-sponsor">
+            <div class="cover">
+                <h4>Get noticed with Velocita</h4>
+                <p>Exposure through <span class="events">Campus</span> | <span class="events">FSAE Event</span> | <span class="events">Socials</span> & more<br>Connect with large Potential Cuatomers</p>
+            </div>
+        </section>
+
+
         <section id="sponsors">
 
             <div class="sponsors-heading">
@@ -950,88 +965,109 @@ Dots/bullets/indicators
             <div class="sponsor-box">
 
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"> <img src="IMAGES/SPONSORS/GOLD/WebP/Gowri Shankar.webp" alt="sponsor-1"></a>
+                    <a href="#" onclick="return false"> <img src="IMAGES/SPONSORS/GOLD/WebP-Black/Gowri Shankar.webp" alt="sponsor-1"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/GOLD/WebP/Juno.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/GOLD/WebP-Black/Juno.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP/garett.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP-Black/garrett.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP/Igus.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP-Black/Igus.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP/Searock.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/WebP-Black/Searock.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/amitronics.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/amitronics.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/aplica.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/aplica.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/cadd centre.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/cadd centre.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/Decofix_Logo.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Decofix_Logo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/henkel logo.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/henkel logo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/Jain spices.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Hitech Laser Logo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/Lion circuits.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Jain spices.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/PROTECK.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Lion circuits.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP/Surya hydraulics.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Prakruthi Packers.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/adler-fire-logo.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/PROTECH.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/AnilLogo.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Rishi Laser.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/banna-spray-paints.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Sri Krishna Weld Tech ID card.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/bharat rubber.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/WebP-Black/Surya hydraulics.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/Bharat_Petroleum_Logo.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/adler-fire-logo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/eastern rubber.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/AnilLogo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/hanu heat treaters.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/banna-spray-paints.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/knorr-brense + parekh agencies.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/bharat rubber.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/manjunath metal finishers.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/Bharat_Petroleum_Logo.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/mipox abrasives.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/Display mart - Logo new.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/Smaaash.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/eastern rubber.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/smartlink.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/hanu heat treaters.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/vaman plastics.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/knorr-brense + parekh agencies.webp" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP/VeeNee powder coating.webp" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/manjunath metal finishers.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/mipox abrasives.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/Safemart_bad res.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/Smaaash.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/smartlink.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/tetra grand.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/vaman plastics.webp" alt="sponsor-2"></a>
+                </div>
+                <div class="sponsor-1">
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/WebP-Black/VeeNee powder coating.webp" alt="sponsor-2"></a>
                 </div>
               
             </div>
@@ -1052,7 +1088,10 @@ Dots/bullets/indicators
                     <p>Partner with us</p>
                     <div class="info-sponsor">
                         <p>We invite you to become a part of our jouney. Feel free to reach us out regarding any sponsor related queries.
-                            <br><br>Velocita Racing will be greatful for your support!</p>
+                            <br><br>Your support can help us create a better future where millions of ingenious ideas can be turned into a 
+                            magnificent reality that can inspire a generation of youth.<br><br>We believe in being the innovator rather than being the imitator which 
+                            drives us to work on our ideas and make them a reality that is near perfect.<br><br>Velocita Racing will
+                             be greatful for your support!</p>
                     </div>
                     <div class="info-sponsor-button">
                         <a class="sponsor-button sponsor-button-one modal-btn-three ripple-btn">Join Us</a>
