--- a/sponsor/brochure/index.html
+++ b/sponsor/brochure/index.html
@@ -113,8 +113,8 @@
 					<div class="dropdown">
 						<button class="dropbtn">CAREERS<img class="dropdown-arrow" src="../../IMAGES/arrow.png" alt="dropdown-arrow"></button>
 						<div class="dropdown-content">
-						<a href="../../#careers">STUDENT CAREERS</a>
-						<a href="./careers/">EXPLORE AREAS</a>
+						<a href="../../#exp-careers">STUDENT CAREERS</a>
+						<a href="../../#careers">EXPLORE AREAS</a>
 						<a href="../../#join-us">RECRUITMENT 2021</a>
 						</div>
 					</div>
@@ -126,6 +126,7 @@
 					<div class="dropdown">
 						<button class="dropbtn">SPONSORS<img class="dropdown-arrow" src="../../IMAGES/arrow.png" alt="dropdown-arrow"></button>
 						<div class="dropdown-content">
+						<a href="../../#exp-sponsorship">EXPLORE</a>
 						<a href="../../#sponsors">OUR SPONSORS</a>
 						<a href="../../#sponsor-us">BECOME A SPONSOR</a>
 						</div>
