--- a/404.html
+++ b/404.html
@@ -61,7 +61,8 @@
                 <div class="dropdown">
                     <button class="dropbtn">CAREERS<img class="dropdown-arrow" src="https://velocitaracing.github.io/IMAGES/arrow.png" alt="dropdown-arrow"></button>
                     <div class="dropdown-content">
-                    <a href="https://velocitaracing.github.io/#careers">STUDENT CAREERS</a>
+                    <a href="https://velocitaracing.github.io/#exp-careers">STUDENT CAREERS</a>
+                    <a href="https://velocitaracing.github.io/#careers">EXPLORE AREAS</a>
                     <a href="https://velocitaracing.github.io/#join-us">RECRUITMENT 2021</a>
                     </div>
                 </div>
@@ -73,6 +74,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">SPONSORS<img class="dropdown-arrow" src="https://velocitaracing.github.io/IMAGES/arrow.png" alt="dropdown-arrow"></button>
                     <div class="dropdown-content">
+                    <a href="https://velocitaracing.github.io/#exp-sponsorship">EXPLORE</a>    
                     <a href="https://velocitaracing.github.io/#sponsors">OUR SPONSORS</a>
                     <a href="https://velocitaracing.github.io/#sponsor-us">BECOME A SPONSOR</a>
                     </div>
