--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <!-- IMAGES/HOME/VR new logo.png -->
         <div class="logo"><a class="logo-txt" href="#home"><img class="black-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo"><img class="white-logo-VR" src="IMAGES/HOME/VR new logo white.png" alt="velocita racing logo white"><p>VELOCITA RACING</p></a></div>
         <ul class="nav-links">
-            <!-- <div class="night-mode">
+            <div style="display: none;" class="night-mode">
                 <input type='checkbox' id='time' class="night-toggle"/>
                 <label for='time'>NIG</label>
-            </div> -->
+            </div>
             <li><a href="#home">HOME</a></li>
             <li class="unset-values one-nav arrowone">
             
@@ -570,6 +570,13 @@ Dots/bullets/indicators
 
 
 
+<section id="exp-car" class="static-car">
+    <div class="cover">
+        <h4>VRF2</h4>
+        <p><span class="events">Smaller</span> | <span class="events">Lighter</span> | <span class="events">Faster</span></p>
+        <p class="time">20 Engineers | 8 months of hardwork | 13th in FB2020</p>
+    </div>
+</section>
 
 
 
@@ -951,7 +958,7 @@ Dots/bullets/indicators
         <section id="exp-sponsorship" class="static-sponsor">
             <div class="cover">
                 <h4>Get noticed with Velocita</h4>
-                <p>Exposure through <span class="events">Campus</span> | <span class="events">FSAE Event</span> | <span class="events">Socials</span> & more<br>Connect with large Potential Cuatomers</p>
+                <p>Exposure through <span class="events">Campus</span> | <span class="events">FSAE Event</span> | <span class="events">Socials</span> & more<br>Connect with large Potential Customers</p>
             </div>
         </section>
 
