--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
                             <p>
                                 Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
                                 This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
-                                on the development of racing grade vehicles for various competitions across India. The racing platforms such as Formula Bharat has 
+                                on the development of racing grade vehicles for various competitions across India. <br><br>The racing platforms such as Formula Bharat has 
                                 given our students a chance to explore various engineering practices which play a vital role in the development of our country. 
-                                Our finish line is more than just a place on the track; our mission is and has always been to innovate, to broaden the frontiers 
+                                <br><br> Our finish line is more than just a place on the track; our mission is and has always been to innovate, to broaden the frontiers 
                                 of young professionals through their creativity, ingenuity, and dexterity. Our team of highly qualified students is the driving 
                                 force behind it, each year developing better racing machines, very much in line with the current developments of the automotive industry.
                             </p>
@@ -574,7 +574,7 @@ Dots/bullets/indicators
     <div class="cover">
         <h4>VRF2</h4>
         <p><span class="events">Smaller</span> | <span class="events">Lighter</span> | <span class="events">Faster</span></p>
-        <p class="time">20 Engineers | 8 months of hardwork | 13th in FB2020</p>
+        <p class="time">20 Engineers | 8 months of work | 13th in FB2020</p>
     </div>
 </section>
 
