--- a/index.html
+++ b/index.html
@@ -571,16 +571,21 @@ Dots/bullets/indicators
 
 
 <section id="exp-car" class="static-car">
-    <div class="cover">
-        <h4>MAYA <span class="make-name">VRF2</span> </h4>
-        <p><span class="events">Smaller</span> | <span class="events">Lighter</span> | <span class="events">Faster</span></p>
-        <p class="time">30 Engineers | 8 months of work | 13th in FB2020</p>
+    <div class="cover-2">
+        <div class="cover-1">
+            <div class="cover">
+                <h4>MAYA <span class="make-name">VRF2</span> </h4>
+                <p><span class="events">Smaller</span> | <span class="events">Lighter</span> | <span class="events">Faster</span></p>
+                <p class="time">30 Engineers | 8 months of work | 13th in FB2020</p>
+            </div>
+        </div>
     </div>
 </section>
 
-<section id="cars-VRF">
 
-</section>
+<!-- <section id="cars-VRF">
+
+</section> -->
 
 
 
