--- a/404.html
+++ b/404.html
@@ -143,7 +143,7 @@
         <div class="content">
             <div class="about-cont cont-box">
                 <!-- <h4 class="footer-heading">STAY CONNECTED</h4> -->
-                <div class="logo"><img src="https://velocitaracing.guthub.io/IMAGES/HOME/VR new logo white.webp" alt="">
+                <div class="logo"><img src="https://velocitaracing.github.io/IMAGES/HOME/VR new logo white.webp" alt="">
                     <div class="underline"></div>
                     <p class="footer-about">Velocita Racing is an exclusive Combustion Class Formula Student Team from Ramaiah Institute of Technology, Bangalore, Karnataka IN</p>
                 </div>
