--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         
                     </div>
                     <div class="about-button">
-                        <a href="javascript:void(0);"><button class="secondaryButton aboutButton" href="">Learn More</button></a>
+                        <a href="javascript:void(0);"><button class="aboutButton" href="">Learn More</button></a>
                     </div>
 
                 </div>
