--- a/index.html
+++ b/index.html
@@ -244,6 +244,24 @@
 
                 <div class="swiper-container swiper-container-home">
                     <div class="swiper-wrapper">
+
+                        <div id="banner-imp" class="swiper-slide banner-6">
+                            <div class="cover-1">
+                                <div class="welcome">
+                                    <div class="underline"></div>
+                                    <p class="welcome-heading">Beyond<br>Engineering</p>
+                                    <p class="welcome-sub-heading">THINK | BUILD | RACE</p>
+                                    <button class="secondaryButton home-button">LEARN MORE</button>
+                                </div>
+                                <div class="blue-box">
+                                    <div class="underline"></div>
+                                    <p class="underline-heading">WHAT'S NEW</p>
+                                    <p class="content">We haven't got anything intersting now.<br>Meanwhile learn more about FSAE</p>
+                                    <a target="_blank" href="https://www.google.com/search?q=fsae"><button class="secondaryButton home-news-button">FSAE</button></a>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="swiper-slide banner-5">
                             <a class="youtube-banner-button" target="_blank" href="https://narkha.com/collections/velocita-racing">Shop Now</a>
                         </div>
@@ -1608,7 +1626,7 @@ Dots/bullets/indicators
         });
     </script> -->
 
-  
+    
     <script src="JS/loader.js"></script>
     <script src="JS/swiper.js"></script>
     <script src="JS/refresh.js"></script>
