--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <a class="youtube-banner-button" target="_blank" href="https://narkha.com/collections/velocita-racing">Shop Now</a>
                         </div>
                       <div class="swiper-slide banner-1">
-                        <!-- <a class="youtube-banner-button" href="#cars">Learn More</a> -->
+                        <a class="podcast-banner-button" href="#exp-car">Learn More</a>
                       </div>
                       <div class="swiper-slide banner-2">
                         <a class="podcast-banner-button" href="#podcast">Learn More</a>
