--- a/links/index.html
+++ b/links/index.html
@@ -6,7 +6,7 @@
     <title>Velocita Racing Links</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../CSS/social.css">
-    <link rel="stylesheet" href="../CSS/footer.css">
+    <!-- <link rel="stylesheet" href="../CSS/footer.css"> -->
     <link rel="stylesheet" href="../shop/css/fontAwesome.css">
 </head>
 <body>
