--- a/crowdfunding/index.html
+++ b/crowdfunding/index.html
@@ -253,7 +253,7 @@
       <div class="slabs-heading">
         <h1 data-aos="fade-up">Know the Slabs</h1>
         <div data-aos="zoom-in" class="underline"></div>
-        <span data-aos="fade-up" class="sub-heading">We've got exciting goodies for you!</span>
+        <span data-aos="zoom-in" class="sub-heading">We've got exciting goodies for you!</span>
       </div>
       
       <div data-aos="fade-up" id="desktop" class="container">
@@ -318,9 +318,9 @@
           <div class="propImage">
             <img id="myImage" src="./icons8-gift.gif" alt="">
           </div>
-            <form class="payment">
+            <!-- <form class="payment"> -->
               <button class="secondaryButton secondary-dark-button">PAY NOW</button>
-            </form>
+            <!-- </form> -->
         </div>
       </div>
 
@@ -342,7 +342,7 @@
                   </ul>
                 </div>
                 <!-- <form class="payment"> -->
-                    <button class="secondaryButton payment-slab-mob-button secondary-dark-button">PAY NOW</button>
+                    <button class="secondaryButton secondary-dark-button">PAY NOW</button>
                 <!-- </form> -->
               </div>
             </div>
